--- a/curtain-client/platformio.ini
+++ b/curtain-client/platformio.ini
@@ -13,4 +13,5 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+upload_port=COM9
 ;board_build.partitions = huge_app.csv
