--- a/new_server/platformio.ini
+++ b/new_server/platformio.ini
@@ -46,8 +46,8 @@ board_build.filesystem = littlefs
 [env:node32s-16]
 ; Comment out min_spiffs.csv setting if disabling PROGMEM_WWW with ESP32
 ;board_build.partitions = min_spiffs.csv
-;board_build.partitions = large_spiffs_16MB.csv
-board_build.partitions = test_part.csv
+board_build.partitions = large_spiffs_16MB.csv
+;board_build.partitions = test_part.csv
 platform = espressif32
 board = node32s-16
 board_build.f_cpu = 240000000L
